# opti_city

./: .gitmodules  Cargo.toml  build.rs
proto/yandex/cloud/ai/stt/v3/: stt_service.proto
src/: main.rs
src/api/: auth_tokens.rs  mod.rs  settings.rs  urls.rs
src/constants/: time.rs
src/services/: mod.rs  service.rs
src/services/yandex_asr/: mod.rs  yandex_asr.rs
src/services/yandex_tts/: mod.rs  yandex_tts.rs
src/services/yandex_tts/structs/: mod.rs  tts_payload.rs
src/structs/: failrue.rs  mod.rs  tts_payload.rs  yandex_iam_token.rs
src/workers/: mod.rs  yandex_iam_token_refresher.rs
