[package]
name = "tts"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.39.0"
bytes = "1.10.0"
chrono = "0.4.40"
futures-util = "0.3.31"
lazy_static = "1.5.0"
prost = "0.13.5"
reqwest = "0.12.12"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
prost-build = "0.13.5"
tonic-build = "0.12.3"
